# sump

./: README.md
iam/: CMakeLists.txt  iam.sln  readme.txt
iam/config/: log4cxx.properties  setting.ini
iam/doc/: IAM.LoginServer.mdl  单点登录开发说明书.docx  单点登录服务单体测试报告书.docx  单点登录服务接口文档.docx
iam/doc/http消息结构/: token认证.txt
iam/doc/msgbus消息结构/: 80100.txt  80101.txt  80102.txt
iam/lib/: lava_utils.exp
iam/src/dds_server_mock/: dds_server_mock.cpp  dds_server_mock.vcxproj  dds_server_mock.vcxproj.filters  helper.cpp  main.cpp
iam/src/gtw_server_mock/: getopt.h  gtw_server_mock.vcxproj  gtw_server_mock.vcxproj.filters  main.cpp  session.cpp  session.h  tokeninfo.h  user_args.h
iam/src/iam_login_server/: CMakeLists.txt  login_server.vcxproj  login_server.vcxproj.filters
iam/src/iam_login_server/core/: common.cpp  common.h  data_cache.cpp  data_cache.h  main.cpp  thread_pool.h
iam/src/iam_login_server/http/: http_connection.cpp  http_connection.h  http_connection_manager.cpp  http_connection_manager.h  http_header.h  http_reply.cpp  http_reply.h  http_request.h  http_request_handler.cpp  http_request_handler.h  http_request_parser.cpp  http_request_parser.h  http_server.cpp  http_server.h
iam/src/iam_login_server/lava/: lava_server.cpp  lava_server.h
iam/src/iam_login_server/msgbus/: msgbus_base_session.h  msgbus_callbacks.cpp  msgbus_callbacks.h  msgbus_helper.cpp  msgbus_helper.h  msgbus_msg_handler.cpp  msgbus_msg_handler.h  msgbus_server.cpp  msgbus_server.h  msgbus_session.cpp  msgbus_session.h  msgbus_thread.cpp  msgbus_thread.h  msgbus_thread_factory.cpp  msgbus_thread_factory.h  msgbus_type.h
iam/src/iam_login_server/process/: handle_functions.cpp  handle_functions.h  lava_process.cpp  lava_process.h  msgbus_process.cpp  msgbus_process.h  server_msg_def.h
iam/src/lava_utils/: CMakeLists.txt  base64.cpp  lava_config.cpp  lava_gzip_helper.cpp  lava_log.cpp  lava_log.h  lava_utils.vcxproj  lava_utils.vcxproj.filters  lava_utils_linux.vcxproj  lava_utils_linux.vcxproj.filters  lava_uuid.cpp  lava_uuid.h  main.cpp  sha256.cpp  sha256.h
iam/src/lava_utils/include/: lava_condition.h  lava_container.h  rwlock.h  spin_wait.h  utils_traits.h
iam/src/qb_clients_mock/: main.cpp  qb_clients_mock.cpp  qb_clients_mock.vcxproj  qb_clients_mock.vcxproj.filters  tokeninfo.h  user_args.h
iam/src/user_info_supplier_mock/: getopt.c  main.cpp  session.cpp  session.h  user_args.h  user_info_supplier_mock.vcxproj  user_info_supplier_mock.vcxproj.filters
iam/src/utils_test/: CMakeLists.txt  main.cpp  test_charset_conv.cpp  test_gzip.cpp  test_lava_config.cpp  test_log.cpp  test_queue.cpp  test_rwlock.cpp  test_semaphore.cpp  test_sha256.cpp  test_spinlock.cpp  test_spinwait.cpp  test_stack.cpp  test_timer.cpp  utils_test.vcxproj  utils_test.vcxproj.filters  utils_test_linux.vcxproj  utils_test_linux.vcxproj.filters
iam/vendors/linux/dist2/lib64/: libboost_date_time.so.1.65.1  libboost_iostreams.so.1.65.1  libboost_prg_exec_monitor.so.1.65.1  libboost_program_options.so.1.65.1  libboost_system.so.1.65.1  libboost_thread.so.1.65.1  libboost_unit_test_framework.so.1.65.1  libboost_wserialization.so.1.65.1  libqpidmessaging.so.2
iam/vendors/linux/lava/lib/: liblava_proto.so.0  liblava_utils.so.0.1
iam/vendors/linux/log4cxx/: libapr-1.la  libapr-1.so.0  libaprutil-1.la  libaprutil-1.so.0  liblog4cxx.la
iam/vendors/linux/python3.6/header/: pyconfig.h
iam/vendors/linux/zookeeper/: libzookeeper_mt.la  libzookeeper_mt.so.2  libzookeeper_st.la  libzookeeper_st.so.2
iam/vendors/linux/zookeeper/header/: config.h  recordio.h  zookeeper.h  zookeeper.jute.h  zookeeper_version.h
iam/vendors/windows/apr-util/header/: apu.h  apu.hw
iam/vendors/windows/apr/header/: apr.h
iam/vendors/windows/boost_1_55_0_v120/lib32/: boost_atomic-vc120-mt-1_55.lib  boost_atomic-vc120-mt-gd-1_55.lib  boost_bzip2-vc120-mt-1_55.lib  boost_bzip2-vc120-mt-gd-1_55.lib  boost_chrono-vc120-mt-1_55.lib  boost_chrono-vc120-mt-gd-1_55.lib  boost_context-vc120-mt-1_55.lib  boost_context-vc120-mt-gd-1_55.lib  boost_coroutine-vc120-mt-1_55.lib  boost_coroutine-vc120-mt-gd-1_55.lib  boost_date_time-vc120-mt-1_55.lib  (+70 more)
sfa/src/msg/: CMakeLists.txt  ReadMe.txt  codec_ascii_string.cpp  codec_ascii_string.h  codec_byte.cpp  codec_byte.h  codec_date.cpp  codec_date.h  codec_decimal.cpp  codec_decimal.h  codec_integer.cpp  codec_integer.h  codec_msg.cpp  codec_msg.h  codec_msg_body_full.cpp  codec_msg_body_full.h  codec_msg_body_update.cpp  codec_msg_body_update.h  codec_msg_header.cpp  codec_msg_header.h  codec_signed_integer.cpp  codec_signed_integer.h  codec_time.cpp  codec_time.h  codec_type.cpp  codec_type.h  codec_unicode_string.cpp  codec_unicode_string.h  codec_unsigned_integer.cpp  codec_unsigned_integer.h  codec_util.cpp  codec_util.h  consts.h  dllmain.cpp  field_id_type.cpp  field_id_type.h  fields.cpp  fields.h  msg.vcxproj  msg.vcxproj.filters  (+26 more)
ssmq/code/SSRTL/: Makefile.am  SSAtomic.h  SSConfig.cpp  SSConfig.h  SSDateTime.cpp  SSDateTime.h  SSLog.cpp  SSLog.h  SSQueue.cpp  SSQueue.h  SSRTL.vcproj  SSRTL.vcxproj  SSRTL.vcxproj.filters  SSSafeObject.h  SSSemaphore.h  SSSpinLock.h  SSString.cpp  SSThread.cpp  SSThread.h  SSType.cpp  SSType.h  SSZip.cpp  SSZip.h
ssmq/code/SSRTL/Atomic/: Atomic_gcc.cpp  Atomic_gcc.h  Atomic_gcc_x86.cpp  Atomic_gcc_x86.h  Atomic_win32.cpp  Atomic_win32.h
ssmq/code/SSRTL/Semaphore/: Semaphore_posix.cpp  Semaphore_posix.h  Semaphore_win32.cpp  Semaphore_win32.h
ssmq/code/SSRTL/SpinLock/: SpinLock_posix.cpp  SpinLock_posix.h  SpinLock_win32.cpp  SpinLock_win32.h
ssmq/code/SSRTL/zlib/: zlib.vcproj
ssmq/code/sdbus/: Makefile.am  callback.cpp  codec.cpp  connection.cpp  datetime.cpp  dict.cpp  engine.cpp  expr.cpp  hash_map.cpp  message.cpp  options.cpp  queue.cpp  resource.h  sdbus.cpp  sdbus.rc  sdbus.vcproj  sdbus.vcxproj  sdbus.vcxproj.filters  string.cpp  type.cpp  variant.cpp  zip.cpp
ssmq/code/sdbus/impl/: callback_impl.h  codec_impl.cpp  codec_impl.h  dict_impl.cpp  dict_impl.h  msgid_manager.cpp  msgid_manager.h  sequencer_impl.cpp  sequencer_impl.h
(+985 files in other folders)
