SET(BINNAME "utils_test")

PROJECT(${BINNAME})
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(EXECUTABLE_OUTPUT_PATH ../build)

if(USE_32BITS)
  message(STATUS "Using 32bits")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
else()
  message(STATUS "Using 64bits")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
endif(USE_32BITS)


SET(VERSION "const char version[] = \"Revision: 0.1.0\"")
SET(PLATFORM "const char platform[] = $ENV{PLATFORM}")

MESSAGE(STATUS "Project: ${BINNAME}")
MESSAGE(STATUS "VERSION: ${VERSION}")
MESSAGE(STATUS "PLATFORM: ${PLATFORM}")
MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")

if(CMAKE_LAVA_SOURCE_DIR)
else()
SET(CMAKE_LAVA_SOURCE_DIR "${CMAKE_SOURCE_DIR}")
endif(CMAKE_LAVA_SOURCE_DIR)

FILE(GLOB SOURCE_MAIN
"${CMAKE_LAVA_SOURCE_DIR}/*.cpp"
)


string(REGEX MATCH ".*clang.*" USE_CLANG ${CMAKE_CXX_COMPILER})
IF (NOT USE_CLANG)
   IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
      SET(USE_CLANG TRUE)
   ENDIF()
ENDIF(NOT USE_CLANG)

if(USE_CLANG)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
else(USE_CLANG)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif(USE_CLANG)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	MESSAGE(STATUS "Debug")
	SET(MY_BUILD_TYPE debug)
else()
	MESSAGE(STATUS "Release")
	SET(MY_BUILD_TYPE release)
endif()

SET(CMAKE_BUILE_TYPE RELEASE)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -frtti -fPIC -Wall -W -g3 -O2 -Wno-write-strings -Wno-deprecated -Wno-sign-compare -Wno-parentheses -Wno-reorder")

SET(CMAKE_MODULE_PATH ../include)
SET(SYS_PATH /usr/local)

INCLUDE_DIRECTORIES(
	"${CMAKE_LAVA_SOURCE_DIR}"
	"${CMAKE_LAVA_SOURCE_DIR}/../include"
	"${CMAKE_LAVA_SOURCE_DIR}/../lava_utils/include"
 )

LINK_DIRECTORIES(
	"${CMAKE_LAVA_SOURCE_DIR}/../build"
)
if(USE_32BITS)
	ADD_DEFINITIONS(-DLAVA_LINUX -DASIO_STANDALONE  -DVERSION=${VERSION} -DPLATFORM=${PLATFORM})
else()
	ADD_DEFINITIONS(-DLAVA_LINUX -DASIO_STANDALONE -DX64 -DVERSION=${VERSION} -DPLATFORM=${PLATFORM})
endif(USE_32BITS)


ADD_EXECUTABLE(${BINNAME} ${SOURCE_MAIN})

if(SVNVER)
	SET_TARGET_PROPERTIES(utils_test PROPERTIES VERSION 0.1 SOVERSION $ENV{SVNVER})
else()
	SET_TARGET_PROPERTIES(utils_test PROPERTIES VERSION 0.1 SOVERSION 0)
endif(SVNVER)

if(USE_CLANG)
    TARGET_LINK_LIBRARIES(utils_test librt.dylib libpthread.dylib liblava_utils.dylib)
else(USE_CLANG)
    TARGET_LINK_LIBRARIES(utils_test  librt.so libpthread.so liblava_utils.so)
endif(USE_CLANG)

INSTALL(TARGETS utils_test
        RUNTIME DESTINATION bin
)